@@ -3,8 +3,8 @@ package no.nav.melosys.service.vedtak.publisering;
 import java.time.ZoneId;
 import java.util.Collection;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+import no.finn.unleash.Unleash;
 import no.nav.melosys.domain.*;
 import no.nav.melosys.domain.behandlingsgrunnlag.Behandlingsgrunnlag;
 import no.nav.melosys.domain.behandlingsgrunnlag.SoeknadFtrl;
@@ -20,8 +20,8 @@ import no.nav.melosys.integrasjon.pdl.dto.person.Statsborgerskap;
 import no.nav.melosys.service.behandling.BehandlingService;
 import no.nav.melosys.service.behandling.BehandlingsresultatService;
 import no.nav.melosys.service.persondata.PersondataFasade;
-import no.nav.melosys.service.vedtak.publisering.dto.*;
 import no.nav.melosys.service.vedtak.publisering.dto.Fullmektig;
+import no.nav.melosys.service.vedtak.publisering.dto.*;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -40,16 +40,16 @@ public class FattetVedtakService {
     private final BehandlingService behandlingService;
     private final BehandlingsresultatService behandlingsresultatService;
     private final PersondataFasade persondataFasade;
+    private final Unleash unleash;
 
-    public FattetVedtakService(FattetVedtakProducer fattetVedtakProducer,
-                               BehandlingService behandlingService,
+    public FattetVedtakService(FattetVedtakProducer fattetVedtakProducer, BehandlingService behandlingService,
                                BehandlingsresultatService behandlingsresultatService,
-                               @Qualifier("system") PersondataFasade persondataFasade
-    ) {
+                               @Qualifier("system") PersondataFasade persondataFasade, Unleash unleash) {
         this.fattetVedtakProducer = fattetVedtakProducer;
         this.behandlingService = behandlingService;
         this.behandlingsresultatService = behandlingsresultatService;
         this.persondataFasade = persondataFasade;
+        this.unleash = unleash;
     }
 
     @Transactional
@@ -60,11 +60,12 @@ public class FattetVedtakService {
 
     private FattetVedtak lagMelding(Behandling behandling) throws IkkeFunnetException {
         var behandlingsresultat = behandlingsresultatService.hentBehandlingsresultat(behandling.getId());
+        final var persondata = hentPersondata(behandling);
         return new FattetVedtak(
-            lagSak(behandling, behandling.getFagsak(), behandling.hentPersonDokument()),
+            lagSak(behandling, behandling.getFagsak(), persondata),
             lagVedtak(behandlingsresultat.getVedtakMetadata()),
             lagSoeknad(behandling.getBehandlingsgrunnlag()),
-            lagSaksopplysninger(behandling.hentPersonDokument()),
+            lagSaksopplysninger(persondata),
             null,
             lagPerioder(behandlingsresultat),
             lagFullmektig(behandling.getFagsak()),
@@ -72,8 +73,15 @@ public class FattetVedtakService {
         );
     }
 
+    private Persondata hentPersondata(Behandling behandling) {
+        if (unleash.isEnabled("melosys.pdl.vedtaksmelding")) {
+            return persondataFasade.hentPerson(behandling.getFagsak().hentAktørID());
+        }
+        return behandling.hentPersonDokument();
+    }
+
     private Sak lagSak(Behandling behandling, Fagsak fagsak, Persondata persondata) {
-        return new Sak(persondata.hentFolkeregisterIdent(),
+        return new Sak(persondata.hentFolkeregisterident(),
             behandling.getId(),
             fagsak.getSaksnummer(),
             fagsak.getType().getKode(),
@@ -105,7 +113,7 @@ public class FattetVedtakService {
 
     private Saksopplysninger lagSaksopplysninger(Persondata persondata) {
         return new Saksopplysninger(
-            new Person(persondata.hentFolkeregisterIdent(),
+            new Person(persondata.hentFolkeregisterident(),
                 new Navn(persondata.getFornavn(), persondata.getMellomnavn(), persondata.getEtternavn(),
                     null
                 ),
@@ -168,15 +176,15 @@ public class FattetVedtakService {
                     )).orElse(null)
                 )
             );
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     private Fullmektig lagFullmektig(Fagsak fagsak) {
-        return fagsak.hentRepresentant(Representerer.BRUKER)
+        return fagsak.finnRepresentant(Representerer.BRUKER)
             .map(f -> {
                 String fnr = null;
                 if (isEmpty(f.getOrgnr())) {
-                    fnr = persondataFasade.hentFolkeregisterIdent(f.getAktørId());
+                    fnr = persondataFasade.hentFolkeregisterident(f.getAktørId());
                 }
                 return new Fullmektig(new Identifikator(hasText(fnr) ? fnr : f.getOrgnr(), hasText(fnr) ? BRUKER : ORGANISASJON));
             }).orElse(null);
@@ -190,7 +198,7 @@ public class FattetVedtakService {
             String fnr = null;
 
             if (betalesAv.getRolle() == Aktoersroller.BRUKER) {
-                fnr = persondataFasade.hentFolkeregisterIdent(betalesAv.getAktørId());
+                fnr = persondataFasade.hentFolkeregisterident(betalesAv.getAktørId());
             }
 
             return new RepresentantAvgift(
